<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.zer0s2m</groupId>
    <artifactId>creep-tenuous</artifactId>
    <version>0.0.11-SNAPSHOT</version>
  </parent>
  <artifactId>creep-tenuous-api</artifactId>
  <version>0.0.11-SNAPSHOT</version>
  <name>creep-tenuous-api</name>
  <description>creep-tenuous-api</description>
  <properties>
    <java.version>17</java.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
    </dependency>
    <dependency>
      <groupId>org.skyscreamer</groupId>
      <artifactId>jsonassert</artifactId>
      <version>1.5.1</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-common</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-repository</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-redis-services</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-redis-events</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-services-system</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-services-redis</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-services-user</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-services-jwt</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-events</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.zer0s2m</groupId>
      <artifactId>creep-tenuous-integration-implants</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.10</version>
        <configuration>
          <dataFile>${basedir}/target/site/jacoco/jacoco.xml</dataFile>
          <destFile>${basedir}/target/site/jacoco/jacoco.xml</destFile>
          <skip>false</skip>
          <output>file</output>
          <append>true</append>
        </configuration>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
